[project]
name = "rpi_system_info"
version = "1.0.0"
description = "Python scripts for Raspberry Pi to control fan based on the CPU temperature"
authors = [
    {name = "Nizam Keramov", email = "keramov.nizam@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "RPi.GPIO == 0.7.1",
]
keywords = [ 
    "rpi",
    "raspberrypi",
    "raspberry-pi",
    "raspberry-pi-projects",
    "python",
    "gpio",
    "fan-controller",
    "relay-controller",
    "pwm-controller",
    "monitoring"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/Nkeramov/rpi_fan_control"
"Bug Tracker" = "https://github.com/Nkeramov/rpi_fan_control/issues"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.4.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "static*",
    "templates*",
    "tests*",
    "docs*",
    "*.egg-info*",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py311"
